// ProtoGeneric
syntax = "proto2";
package pl.inder00.opensource.sectors.protobuf;
import "ProtoGeneric.proto";
option java_outer_classname = "ProtobufConfigurationData";

// player uuids
message ConfigurationPacket {
  required string version = 2;
  required uint32 protectionDistance = 3;
  required uint32 changeSectorCooldown = 4;
  required string defaultLanguage = 5;
  repeated ConfigurationMessage messages =6;
  repeated ConfigurationAlias aliases = 7;
  repeated ProtoSector sectors = 8;
}

// Message
message ConfigurationMessage {
  required string key = 1;
  required string value = 2;
}

// alias
message ConfigurationAlias {
  required string source = 1;
  required string target = 2;
}